grafana-plugin-sdk-macros/tests/ui-fail/invalid_shutdown_handler.stderr
error: Failed to parse value of `shutdown_handler` as string.
  --> tests/ui-fail/invalid_shutdown_handler.rs:38:67
   |
38 |     #[grafana_plugin_sdk::main(services(data), shutdown_handler = true)]
   |                                                                   ^^^^

error: `shutdown_handler` attribute should be specified as `shutdown_handler = "127.0.0.1:10001"`
  --> tests/ui-fail/invalid_shutdown_handler.rs:79:48
   |
79 |     #[grafana_plugin_sdk::main(services(data), shutdown_handler("127.0.0.1:10001"))]
   |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
